Fixed spacing
Beautify'ed the code

--- a/css/agency.css
+++ b/css/agency.css
@@ -1,44 +1,4 @@
-
-* Start Bootstrap
-
--
-Agency v3
-
-.3
-.7
-+
-1
-(
-http:
-
-/
-/
-startbootstrap.com /template-overviews/ agency
-
-)
-* Copyright
-
-2013
--
-2016
-Start Bootstrap
-* Licensed under MIT
-
-(
-https:
-
-/
-/
-github.com /BlackrockDigital/ startbootstrap /blob/ gh-pages
-
-/
-LICENSE
-
-)
-*
-
-/
-body {
+* Start Bootstrap - Agency v3 .3 .7 + 1 ( http: / / startbootstrap.com /template-overviews/ agency) * Copyright 2013 - 2016 Start Bootstrap * Licensed under MIT ( https: / / github.com /BlackrockDigital/ startbootstrap /blob/ gh-pages / LICENSE) * / body {
     overflow-x: hidden;
     font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
